--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="Source\Input.cpp" />
     <ClCompile Include="Source\Load.cpp" />
     <ClCompile Include="Source\main.cpp" />
+    <ClCompile Include="Source\Menu.cpp" />
     <ClCompile Include="Source\Player.cpp" />
     <ClCompile Include="Source\Point.cpp" />
     <ClCompile Include="Source\MyRectangle.cpp" />
@@ -66,6 +67,7 @@
     <ClInclude Include="Source\IScene.h" />
     <ClInclude Include="Source\IStarMove.h" />
     <ClInclude Include="Source\Load.h" />
+    <ClInclude Include="Source\Menu.h" />
     <ClInclude Include="Source\Player.h" />
     <ClInclude Include="Source\Point.h" />
     <ClInclude Include="Source\MyRectangle.h" />
