--- a/hosihime/hosihime/hosihime.vcxproj.filters
+++ b/hosihime/hosihime/hosihime.vcxproj.filters
@@ -177,8 +177,11 @@
     <ClCompile Include="Source\Menu.cpp">
       <Filter>ソース ファイル\scene</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Device.cpp">
+      <Filter>ソース ファイル\util\device</Filter>
+    </ClCompile>
     <ClCompile Include="Source\TimeScore.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース ファイル\stage</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -311,8 +314,11 @@
     <ClInclude Include="Source\Menu.h">
       <Filter>ヘッダー ファイル\scene</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Device.h">
+      <Filter>ヘッダー ファイル\util\device</Filter>
+    </ClInclude>
     <ClInclude Include="Source\TimeScore.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ヘッダー ファイル\stage</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
