--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -11,91 +11,91 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Animation.cpp" />
-    <ClCompile Include="Source\AnimationTimer.cpp" />
-    <ClCompile Include="Source\Circle.cpp" />
-    <ClCompile Include="Source\CSVStream.cpp" />
-    <ClCompile Include="Source\Device.cpp" />
-    <ClCompile Include="Source\Ending.cpp" />
-    <ClCompile Include="Source\game.cpp" />
-    <ClCompile Include="Source\GameObjControl.cpp" />
-    <ClCompile Include="Source\GameObject.cpp" />
-    <ClCompile Include="Source\GamePlay.cpp" />
-    <ClCompile Include="Source\ImMovable.cpp" />
-    <ClCompile Include="Source\Input.cpp" />
-    <ClCompile Include="Source\Load.cpp" />
-    <ClCompile Include="Source\main.cpp" />
-    <ClCompile Include="Source\Menu.cpp" />
-    <ClCompile Include="Source\Player.cpp" />
-    <ClCompile Include="Source\Point.cpp" />
-    <ClCompile Include="Source\MyRectangle.cpp" />
-    <ClCompile Include="Source\Renderer.cpp" />
-    <ClCompile Include="Source\Respawn.cpp" />
-    <ClCompile Include="Source\SceneManager.cpp" />
-    <ClCompile Include="Source\Scroll.cpp" />
-    <ClCompile Include="Source\Sound.cpp" />
-    <ClCompile Include="Source\Stage.cpp" />
-    <ClCompile Include="Source\StageSelect.cpp" />
-    <ClCompile Include="Source\Star.cpp" />
-    <ClCompile Include="Source\StarDataStream.cpp" />
-    <ClCompile Include="Source\StarManager.cpp" />
-    <ClCompile Include="Source\Star_cricle.cpp" />
-    <ClCompile Include="Source\Star_eight.cpp" />
-    <ClCompile Include="Source\Star_nomove.cpp" />
-    <ClCompile Include="Source\Star_paradola.cpp" />
-    <ClCompile Include="Source\Star_pendulum.cpp" />
-    <ClCompile Include="Source\Star_slashdown.cpp" />
-    <ClCompile Include="Source\Star_wave.cpp" />
-    <ClCompile Include="Source\Timer.cpp" />
-    <ClCompile Include="Source\TimeScore.cpp" />
-    <ClCompile Include="Source\Title.cpp" />
+    <ClCompile Include="Code\Source\Animation.cpp" />
+    <ClCompile Include="Code\Source\AnimationTimer.cpp" />
+    <ClCompile Include="Code\Source\Circle.cpp" />
+    <ClCompile Include="Code\Source\CSVStream.cpp" />
+    <ClCompile Include="Code\Source\Device.cpp" />
+    <ClCompile Include="Code\Source\Ending.cpp" />
+    <ClCompile Include="Code\Source\game.cpp" />
+    <ClCompile Include="Code\Source\GameObjControl.cpp" />
+    <ClCompile Include="Code\Source\GameObject.cpp" />
+    <ClCompile Include="Code\Source\GamePlay.cpp" />
+    <ClCompile Include="Code\Source\ImMovable.cpp" />
+    <ClCompile Include="Code\Source\Input.cpp" />
+    <ClCompile Include="Code\Source\Load.cpp" />
+    <ClCompile Include="Code\Source\main.cpp" />
+    <ClCompile Include="Code\Source\Menu.cpp" />
+    <ClCompile Include="Code\Source\MyRectangle.cpp" />
+    <ClCompile Include="Code\Source\Player.cpp" />
+    <ClCompile Include="Code\Source\Point.cpp" />
+    <ClCompile Include="Code\Source\Renderer.cpp" />
+    <ClCompile Include="Code\Source\Respawn.cpp" />
+    <ClCompile Include="Code\Source\SceneManager.cpp" />
+    <ClCompile Include="Code\Source\Scroll.cpp" />
+    <ClCompile Include="Code\Source\Sound.cpp" />
+    <ClCompile Include="Code\Source\Stage.cpp" />
+    <ClCompile Include="Code\Source\StageSelect.cpp" />
+    <ClCompile Include="Code\Source\Star.cpp" />
+    <ClCompile Include="Code\Source\StarDataStream.cpp" />
+    <ClCompile Include="Code\Source\StarManager.cpp" />
+    <ClCompile Include="Code\Source\Star_cricle.cpp" />
+    <ClCompile Include="Code\Source\Star_eight.cpp" />
+    <ClCompile Include="Code\Source\Star_nomove.cpp" />
+    <ClCompile Include="Code\Source\Star_paradola.cpp" />
+    <ClCompile Include="Code\Source\Star_pendulum.cpp" />
+    <ClCompile Include="Code\Source\Star_slashdown.cpp" />
+    <ClCompile Include="Code\Source\Star_wave.cpp" />
+    <ClCompile Include="Code\Source\Timer.cpp" />
+    <ClCompile Include="Code\Source\TimeScore.cpp" />
+    <ClCompile Include="Code\Source\Title.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\Animation.h" />
-    <ClInclude Include="Source\AnimationTimer.h" />
-    <ClInclude Include="Source\Array2D.h" />
-    <ClInclude Include="Source\Calculate.h" />
-    <ClInclude Include="Source\Circle.h" />
-    <ClInclude Include="Source\CSVStream.h" />
-    <ClInclude Include="Source\Definition.h" />
-    <ClInclude Include="Source\Device.h" />
-    <ClInclude Include="Source\Ending.h" />
-    <ClInclude Include="Source\game.h" />
-    <ClInclude Include="Source\GameObjControl.h" />
-    <ClInclude Include="Source\GameObject.h" />
-    <ClInclude Include="Source\GAMEOBJ_TYPE.h" />
-    <ClInclude Include="Source\GamePlay.h" />
-    <ClInclude Include="Source\ImMovable.h" />
-    <ClInclude Include="Source\Input.h" />
-    <ClInclude Include="Source\IScene.h" />
-    <ClInclude Include="Source\IStarMove.h" />
-    <ClInclude Include="Source\Load.h" />
-    <ClInclude Include="Source\Menu.h" />
-    <ClInclude Include="Source\Player.h" />
-    <ClInclude Include="Source\Point.h" />
-    <ClInclude Include="Source\MyRectangle.h" />
-    <ClInclude Include="Source\Renderer.h" />
-    <ClInclude Include="Source\Respawn.h" />
-    <ClInclude Include="Source\SceneManager.h" />
-    <ClInclude Include="Source\Scroll.h" />
-    <ClInclude Include="Source\Sound.h" />
-    <ClInclude Include="Source\Stage.h" />
-    <ClInclude Include="Source\StageSelect.h" />
-    <ClInclude Include="Source\Star.h" />
-    <ClInclude Include="Source\StarDataStream.h" />
-    <ClInclude Include="Source\StarManager.h" />
-    <ClInclude Include="Source\StarMediator.h" />
-    <ClInclude Include="Source\STARTYPE.h" />
-    <ClInclude Include="Source\Star_cricle.h" />
-    <ClInclude Include="Source\Star_eight.h" />
-    <ClInclude Include="Source\Star_nomove.h" />
-    <ClInclude Include="Source\Star_parabola.h" />
-    <ClInclude Include="Source\Star_pendulum.h" />
-    <ClInclude Include="Source\Star_slashdown.h" />
-    <ClInclude Include="Source\Star_wave.h" />
-    <ClInclude Include="Source\Timer.h" />
-    <ClInclude Include="Source\TimeScore.h" />
-    <ClInclude Include="Source\Title.h" />
+    <ClInclude Include="Code\Include\Animation.h" />
+    <ClInclude Include="Code\Include\AnimationTimer.h" />
+    <ClInclude Include="Code\Include\Array2D.h" />
+    <ClInclude Include="Code\Include\Calculate.h" />
+    <ClInclude Include="Code\Include\Circle.h" />
+    <ClInclude Include="Code\Include\CSVStream.h" />
+    <ClInclude Include="Code\Include\Device.h" />
+    <ClInclude Include="Code\Include\EffectGL.h" />
+    <ClInclude Include="Code\Include\Ending.h" />
+    <ClInclude Include="Code\Include\game.h" />
+    <ClInclude Include="Code\Include\GameObjControl.h" />
+    <ClInclude Include="Code\Include\GameObject.h" />
+    <ClInclude Include="Code\Include\GAMEOBJ_TYPE.h" />
+    <ClInclude Include="Code\Include\GamePlay.h" />
+    <ClInclude Include="Code\Include\ImMovable.h" />
+    <ClInclude Include="Code\Include\Input.h" />
+    <ClInclude Include="Code\Include\IScene.h" />
+    <ClInclude Include="Code\Include\IStarMove.h" />
+    <ClInclude Include="Code\Include\Load.h" />
+    <ClInclude Include="Code\Include\Menu.h" />
+    <ClInclude Include="Code\Include\MyRectangle.h" />
+    <ClInclude Include="Code\Include\Player.h" />
+    <ClInclude Include="Code\Include\Point.h" />
+    <ClInclude Include="Code\Include\Renderer.h" />
+    <ClInclude Include="Code\Include\RenderTarget.h" />
+    <ClInclude Include="Code\Include\SceneManager.h" />
+    <ClInclude Include="Code\Include\Scroll.h" />
+    <ClInclude Include="Code\Include\Sound.h" />
+    <ClInclude Include="Code\Include\Stage.h" />
+    <ClInclude Include="Code\Include\StageSelect.h" />
+    <ClInclude Include="Code\Include\Star.h" />
+    <ClInclude Include="Code\Include\StarDataStream.h" />
+    <ClInclude Include="Code\Include\StarManager.h" />
+    <ClInclude Include="Code\Include\StarMediator.h" />
+    <ClInclude Include="Code\Include\STARTYPE.h" />
+    <ClInclude Include="Code\Include\Star_cricle.h" />
+    <ClInclude Include="Code\Include\Star_eight.h" />
+    <ClInclude Include="Code\Include\Star_nomove.h" />
+    <ClInclude Include="Code\Include\Star_parabola.h" />
+    <ClInclude Include="Code\Include\Star_pendulum.h" />
+    <ClInclude Include="Code\Include\Star_slashdown.h" />
+    <ClInclude Include="Code\Include\Star_wave.h" />
+    <ClInclude Include="Code\Include\Timer.h" />
+    <ClInclude Include="Code\Include\TimeScore.h" />
+    <ClInclude Include="Code\Include\Title.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{62158161-410D-471D-AE4B-F01034C23A8E}</ProjectGuid>
@@ -128,7 +128,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\gslib_2012\inc;$(IncludePath)</IncludePath>
+    <IncludePath>C:\gslib_2012\inc;$(ProjectDir)Code\Include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\gslib_2012\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
