--- a/hosihime/hosihime/hosihime.vcxproj.filters
+++ b/hosihime/hosihime/hosihime.vcxproj.filters
@@ -67,6 +67,12 @@
     <Filter Include="ソース ファイル\gameobject\star\move">
       <UniqueIdentifier>{23c229f2-9d4a-4583-8601-d491ec4abd6f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ヘッダー ファイル\gameobject\Factory">
+      <UniqueIdentifier>{890f7721-9712-44d8-99d4-5cfb5d933538}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\gameobject\Factory">
+      <UniqueIdentifier>{31227a6e-bb96-4161-a154-3f69d5ca8ab7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\game.cpp">
@@ -184,7 +190,7 @@
       <Filter>ソース ファイル\stage</Filter>
     </ClCompile>
     <ClCompile Include="Source\GameObjectFactory.cpp">
-      <Filter>ソース ファイル\gameobject</Filter>
+      <Filter>ソース ファイル\gameobject\Factory</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -323,14 +329,14 @@
     <ClInclude Include="Source\TimeScore.h">
       <Filter>ヘッダー ファイル\stage</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Factory.h">
-      <Filter>ヘッダー ファイル\gameobject</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\GameObjectFactory.h">
-      <Filter>ヘッダー ファイル\gameobject</Filter>
-    </ClInclude>
     <ClInclude Include="Source\GameObje_Include.h">
       <Filter>ヘッダー ファイル\gameobject</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Factory.h">
+      <Filter>ヘッダー ファイル\gameobject\Factory</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GameObjectFactory.h">
+      <Filter>ヘッダー ファイル\gameobject\Factory</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
