--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="Code\Source\Animation.cpp" />
     <ClCompile Include="Code\Source\AnimationTimer.cpp" />
     <ClCompile Include="Code\Source\Circle.cpp" />
+    <ClCompile Include="Code\Source\Collision.cpp" />
     <ClCompile Include="Code\Source\CSVStream.cpp" />
     <ClCompile Include="Code\Source\Device.cpp" />
     <ClCompile Include="Code\Source\Ending.cpp" />
@@ -36,6 +37,7 @@
     <ClCompile Include="Code\Source\Respawn.cpp" />
     <ClCompile Include="Code\Source\SceneManager.cpp" />
     <ClCompile Include="Code\Source\Scroll.cpp" />
+    <ClCompile Include="Code\Source\Segment.cpp" />
     <ClCompile Include="Code\Source\Sound.cpp" />
     <ClCompile Include="Code\Source\Stage.cpp" />
     <ClCompile Include="Code\Source\StageSelect.cpp" />
@@ -59,6 +61,7 @@
     <ClInclude Include="Code\Include\Array2D.h" />
     <ClInclude Include="Code\Include\Calculate.h" />
     <ClInclude Include="Code\Include\Circle.h" />
+    <ClInclude Include="Code\Include\Collision.h" />
     <ClInclude Include="Code\Include\CSVStream.h" />
     <ClInclude Include="Code\Include\Device.h" />
     <ClInclude Include="Code\Include\Ending.h" />
@@ -85,6 +88,7 @@
     <ClInclude Include="Code\Include\Renderer.h" />
     <ClInclude Include="Code\Include\SceneManager.h" />
     <ClInclude Include="Code\Include\Scroll.h" />
+    <ClInclude Include="Code\Include\Segment.h" />
     <ClInclude Include="Code\Include\Sound.h" />
     <ClInclude Include="Code\Include\Stage.h" />
     <ClInclude Include="Code\Include\StageSelect.h" />
