--- a/hosihime/hosihime/hosihime.vcxproj.filters
+++ b/hosihime/hosihime/hosihime.vcxproj.filters
@@ -204,6 +204,12 @@
     <ClCompile Include="Code\Source\PlayMode_Play.cpp">
       <Filter>ソース ファイル\scene\GamePlay</Filter>
     </ClCompile>
+    <ClCompile Include="Code\Source\Segment.cpp">
+      <Filter>ソース ファイル\util\diagram</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\Source\Collision.cpp">
+      <Filter>ソース ファイル\util\diagram</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\Include\GAMEOBJ_TYPE.h">
@@ -352,6 +358,12 @@
     </ClInclude>
     <ClInclude Include="Code\Include\PlayMode_Play.h">
       <Filter>ヘッダー ファイル\scene\GamePlay</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Include\Collision.h">
+      <Filter>ヘッダー ファイル\util\diagram</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Include\Segment.h">
+      <Filter>ヘッダー ファイル\util\diagram</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
